pass two drivers one stop